samples/_failures_safe/1761317726_6bf72e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b04faf86.c: In function ‘main’:
./samples/SAFE/__tmp_b04faf86.c:154:5: error: expected declaration or statement at end of input
  154 |     graph_add_edge(&g, b, c, 1);
      |     ^~~~~~~~~~~~~~
